<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!--        <TextView-->
        <!--            android:id="@+id/col_id"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            android:text="@string/col_id"/>-->

        <TextView
            android:id="@+id/col_date"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.5"
            android:gravity="left"
            android:text="@string/col_date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/col_weight"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/col_wight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/col_bmi"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/col_bmi"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/col_title"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/col_title"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>